fixed  overflow

--- a/src/scss/02-base/_reset.scss
+++ b/src/scss/02-base/_reset.scss
@@ -5,6 +5,9 @@
 	
 }
 
+header{
+	width: 100%;
+}
 
 
 ::placeholder{
@@ -13,8 +16,8 @@
 body {
 	margin: 0;
 	font-family:  -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
-	height:100vh;
-	width:100vw;
+	height:100vh !important;
+	width:100vw !important;
 }
 
 img {
