--- a/src/scss/04-globals/_header.scss
+++ b/src/scss/04-globals/_header.scss
@@ -1,6 +1,8 @@
 nav{
-	margin-bottom:2rem;
-	width: auto;
+	margin-bottom:.5rem;
+	width: 100vw;
+	overflow: hidden;
+
 }
 
 
@@ -8,7 +10,7 @@ nav{
 	color:rgb(248,255,255);
 	Background:rgb(36, 41, 46);	
 	width: 100%;
-	overflow:visible;
+
 
 
 	.container{
@@ -98,6 +100,8 @@ nav{
 
 .nav-group2{
 	display:flex;
+	padding-top: 0.5rem;
+	padding-right: 2rem;
 
 	i.fa-bell{
 		@media screen and (max-width: 786px) {
@@ -132,16 +136,18 @@ nav{
 	position: sticky !important;
 	background:white;
 	padding:1rem;
+	//height: 1rem;
+
 }
 
 .tabs{
 	display: flex;
 	z-index: 1;
-	width:100vw !important;
+	width:100%;
 	border-bottom: solid 1px #eaecef;
-	margin-top:.5rem;
-	padding-left: 25%;
+	padding-left: 30%;
 	
+
 	
 
 	@media screen and (max-width: 965px) {
