--- a/src/scss/04-globals/_layout.scss
+++ b/src/scss/04-globals/_layout.scss
@@ -1,8 +1,9 @@
 .profile{
-	
+	max-width: 35%;
 	position: absolute;
 	margin-left: 2rem;
 	flex-shrink: 0;
+	margin-top:2.5rem;
 	
 	@media screen and (max-width: 965px) {
 		position: relative;
@@ -71,10 +72,10 @@ position: relative;
 }
 
 .repo{
-	width:60%;
-	margin-left:25% ;
+	width:65%;
+	margin-left:30% ;
 	margin-top:1rem;
-	margin-right: 30%;
+	overflow: hidden;
 	
 
 	@media screen and (max-width: 965px) {
@@ -86,7 +87,7 @@ position: relative;
 	@media screen and (max-width: 786px) {
 		width: 90vw;
 		margin-left: 5%;
-		paddings-right: 5%;
+		padding-right: 5%;
 		overflow: hidden;
 	
 	}
